# Cursachiko

./: Borisova Annah. Course work.docx  README.md
CUDACode/: CUDACode.sln  CUDACode.vcxproj  kernel.cu
CursachikoCode/: CMakeLists.txt  CMakeSettings.json  CursachikoCode.cpp  CursachikoCode.h
test_results/: output_CUDA.txt  output_OPENMP.txt  output_naive.txt  output_optimized.txt
